// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should not display hidden columns 1`] = `
<div>
  <table
    class="av-grid table"
    role="table"
  >
    <thead
      class="av-grid-row-header"
      id="table_header"
    >
      <tr
        data-testid="table_header_row_0"
        id="table_header_row_0"
        role="row"
      >
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_0_first_name"
          id="table_header_row_0_cell_0_first_name"
          role="columnheader"
          title="First Name"
        >
          First Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_1_last_name"
          id="table_header_row_0_cell_1_last_name"
          role="columnheader"
          title="Last Name"
        >
          Last Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_2_email"
          id="table_header_row_0_cell_2_email"
          role="columnheader"
          title="Email"
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        class="av-grid-row-even"
        data-testid="table_row_0"
        id="table_row_0"
        role="row"
      >
        <td
          data-testid="table_row_0_cell_0"
          id="table_row_0_cell_0"
        >
          Barbra
        </td>
        <td
          data-testid="table_row_0_cell_1"
          id="table_row_0_cell_1"
        >
          Tull
        </td>
        <td
          data-testid="table_row_0_cell_2"
          id="table_row_0_cell_2"
        >
          btull0@usatoday.com
        </td>
      </tr>
      <tr
        class="av-grid-row-odd"
        data-testid="table_row_1"
        id="table_row_1"
        role="row"
      >
        <td
          data-testid="table_row_1_cell_0"
          id="table_row_1_cell_0"
        >
          Karlis
        </td>
        <td
          data-testid="table_row_1_cell_1"
          id="table_row_1_cell_1"
        >
          Yurshev
        </td>
        <td
          data-testid="table_row_1_cell_2"
          id="table_row_1_cell_2"
        >
          kyurshev1@spotify.com
        </td>
      </tr>
      <tr
        class="av-grid-row-even"
        data-testid="table_row_2"
        id="table_row_2"
        role="row"
      >
        <td
          data-testid="table_row_2_cell_0"
          id="table_row_2_cell_0"
        >
          Bordie
        </td>
        <td
          data-testid="table_row_2_cell_1"
          id="table_row_2_cell_1"
        >
          Marsy
        </td>
        <td
          data-testid="table_row_2_cell_2"
          id="table_row_2_cell_2"
        >
          bmarsy2@elegantthemes.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table should render basic table 1`] = `
<div>
  <table
    class="av-grid table"
    role="table"
  >
    <thead
      class="av-grid-row-header"
      id="table_header"
    >
      <tr
        data-testid="table_header_row_0"
        id="table_header_row_0"
        role="row"
      >
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_0_first_name"
          id="table_header_row_0_cell_0_first_name"
          role="columnheader"
          title="First Name"
        >
          First Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_1_last_name"
          id="table_header_row_0_cell_1_last_name"
          role="columnheader"
          title="Last Name"
        >
          Last Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_2_email"
          id="table_header_row_0_cell_2_email"
          role="columnheader"
          title="Email"
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        class="av-grid-row-even"
        data-testid="table_row_0"
        id="table_row_0"
        role="row"
      >
        <td
          data-testid="table_row_0_cell_0"
          id="table_row_0_cell_0"
        >
          Barbra
        </td>
        <td
          data-testid="table_row_0_cell_1"
          id="table_row_0_cell_1"
        >
          Tull
        </td>
        <td
          data-testid="table_row_0_cell_2"
          id="table_row_0_cell_2"
        >
          btull0@usatoday.com
        </td>
      </tr>
      <tr
        class="av-grid-row-odd"
        data-testid="table_row_1"
        id="table_row_1"
        role="row"
      >
        <td
          data-testid="table_row_1_cell_0"
          id="table_row_1_cell_0"
        >
          Karlis
        </td>
        <td
          data-testid="table_row_1_cell_1"
          id="table_row_1_cell_1"
        >
          Yurshev
        </td>
        <td
          data-testid="table_row_1_cell_2"
          id="table_row_1_cell_2"
        >
          kyurshev1@spotify.com
        </td>
      </tr>
      <tr
        class="av-grid-row-even"
        data-testid="table_row_2"
        id="table_row_2"
        role="row"
      >
        <td
          data-testid="table_row_2_cell_0"
          id="table_row_2_cell_0"
        >
          Bordie
        </td>
        <td
          data-testid="table_row_2_cell_1"
          id="table_row_2_cell_1"
        >
          Marsy
        </td>
        <td
          data-testid="table_row_2_cell_2"
          id="table_row_2_cell_2"
        >
          bmarsy2@elegantthemes.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table should render selectable table 1`] = `
<div>
  <table
    class="av-grid table"
    role="table"
  >
    <thead
      class="av-grid-row-header"
      id="table_header"
    >
      <tr
        data-testid="table_header_row_0"
        id="table_header_row_0"
        role="row"
      >
        <th
          class="fixed-width-selection"
          colspan="1"
          data-testid="table_header_row_0_cell_0_selection"
          id="table_header_row_0_cell_0_selection"
          role="columnheader"
        >
          <div
            class="text-center"
          >
            <label
              class="custom-control custom-checkbox"
            >
              <input
                aria-label="Select all records"
                class="custom-control-input"
                data-testid="table_header_select_all"
                style="cursor: pointer;"
                title="Toggle All Rows Selected"
                type="checkbox"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_1_first_name"
          id="table_header_row_0_cell_1_first_name"
          role="columnheader"
          title="First Name"
        >
          First Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_2_last_name"
          id="table_header_row_0_cell_2_last_name"
          role="columnheader"
          title="Last Name"
        >
          Last Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_3_email"
          id="table_header_row_0_cell_3_email"
          role="columnheader"
          title="Email"
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        class="av-grid-row-even"
        data-testid="table_row_0"
        id="table_row_0"
        role="row"
      >
        <td
          class="fixed-width-selection"
          data-testid="table_row_0_cell_0"
          id="table_row_0_cell_0"
        >
          <div
            class="text-center"
          >
            <label
              class="custom-control custom-checkbox"
            >
              <input
                aria-label="Select record"
                class="custom-control-input"
                data-testid="table_header_select_row_0"
                style="cursor: pointer;"
                title="Toggle Row Selected"
                type="checkbox"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </td>
        <td
          data-testid="table_row_0_cell_1"
          id="table_row_0_cell_1"
        >
          Barbra
        </td>
        <td
          data-testid="table_row_0_cell_2"
          id="table_row_0_cell_2"
        >
          Tull
        </td>
        <td
          data-testid="table_row_0_cell_3"
          id="table_row_0_cell_3"
        >
          btull0@usatoday.com
        </td>
      </tr>
      <tr
        class="av-grid-row-odd"
        data-testid="table_row_1"
        id="table_row_1"
        role="row"
      >
        <td
          class="fixed-width-selection"
          data-testid="table_row_1_cell_0"
          id="table_row_1_cell_0"
        >
          <div
            class="text-center"
          >
            <label
              class="custom-control custom-checkbox"
            >
              <input
                aria-label="Select record"
                class="custom-control-input"
                data-testid="table_header_select_row_1"
                style="cursor: pointer;"
                title="Toggle Row Selected"
                type="checkbox"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </td>
        <td
          data-testid="table_row_1_cell_1"
          id="table_row_1_cell_1"
        >
          Karlis
        </td>
        <td
          data-testid="table_row_1_cell_2"
          id="table_row_1_cell_2"
        >
          Yurshev
        </td>
        <td
          data-testid="table_row_1_cell_3"
          id="table_row_1_cell_3"
        >
          kyurshev1@spotify.com
        </td>
      </tr>
      <tr
        class="av-grid-row-even"
        data-testid="table_row_2"
        id="table_row_2"
        role="row"
      >
        <td
          class="fixed-width-selection"
          data-testid="table_row_2_cell_0"
          id="table_row_2_cell_0"
        >
          <div
            class="text-center"
          >
            <label
              class="custom-control custom-checkbox"
            >
              <input
                aria-label="Select record"
                class="custom-control-input"
                data-testid="table_header_select_row_2"
                style="cursor: pointer;"
                title="Toggle Row Selected"
                type="checkbox"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </td>
        <td
          data-testid="table_row_2_cell_1"
          id="table_row_2_cell_1"
        >
          Bordie
        </td>
        <td
          data-testid="table_row_2_cell_2"
          id="table_row_2_cell_2"
        >
          Marsy
        </td>
        <td
          data-testid="table_row_2_cell_3"
          id="table_row_2_cell_3"
        >
          bmarsy2@elegantthemes.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table should render sortable table 1`] = `
<div>
  <table
    class="av-grid table"
    role="table"
  >
    <thead
      class="av-grid-row-header"
      id="table_header"
    >
      <tr
        data-testid="table_header_row_0"
        id="table_header_row_0"
        role="row"
      >
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_0_first_name"
          id="table_header_row_0_cell_0_first_name"
          role="columnheader"
          style="cursor: pointer;"
          title="First Name"
        >
          First Name
          <i
            aria-hidden="true"
            class="icon icon-sort"
          />
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_1_last_name"
          id="table_header_row_0_cell_1_last_name"
          role="columnheader"
          style="cursor: pointer;"
          title="Last Name"
        >
          Last Name
          <i
            aria-hidden="true"
            class="icon icon-sort"
          />
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_2_email"
          id="table_header_row_0_cell_2_email"
          role="columnheader"
          style="cursor: pointer;"
          title="Email"
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        class="av-grid-row-even"
        data-testid="table_row_0"
        id="table_row_0"
        role="row"
      >
        <td
          data-testid="table_row_0_cell_0"
          id="table_row_0_cell_0"
        >
          Barbra
        </td>
        <td
          data-testid="table_row_0_cell_1"
          id="table_row_0_cell_1"
        >
          Tull
        </td>
        <td
          data-testid="table_row_0_cell_2"
          id="table_row_0_cell_2"
        >
          btull0@usatoday.com
        </td>
      </tr>
      <tr
        class="av-grid-row-odd"
        data-testid="table_row_1"
        id="table_row_1"
        role="row"
      >
        <td
          data-testid="table_row_1_cell_0"
          id="table_row_1_cell_0"
        >
          Karlis
        </td>
        <td
          data-testid="table_row_1_cell_1"
          id="table_row_1_cell_1"
        >
          Yurshev
        </td>
        <td
          data-testid="table_row_1_cell_2"
          id="table_row_1_cell_2"
        >
          kyurshev1@spotify.com
        </td>
      </tr>
      <tr
        class="av-grid-row-even"
        data-testid="table_row_2"
        id="table_row_2"
        role="row"
      >
        <td
          data-testid="table_row_2_cell_0"
          id="table_row_2_cell_0"
        >
          Bordie
        </td>
        <td
          data-testid="table_row_2_cell_1"
          id="table_row_2_cell_1"
        >
          Marsy
        </td>
        <td
          data-testid="table_row_2_cell_2"
          id="table_row_2_cell_2"
        >
          bmarsy2@elegantthemes.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table should render with expected ids 1`] = `
<div>
  <table
    class="av-grid table"
    id="my_availity_table"
    role="table"
  >
    <thead
      class="av-grid-row-header"
      id="my_availity_table_table_header"
    >
      <tr
        data-testid="my_availity_table_table_header_row_0"
        id="my_availity_table_table_header_row_0"
        role="row"
      >
        <th
          colspan="1"
          data-testid="my_availity_table_table_header_row_0_cell_0_first_name"
          id="my_availity_table_table_header_row_0_cell_0_first_name"
          role="columnheader"
          title="First Name"
        >
          First Name
        </th>
        <th
          colspan="1"
          data-testid="my_availity_table_table_header_row_0_cell_1_last_name"
          id="my_availity_table_table_header_row_0_cell_1_last_name"
          role="columnheader"
          title="Last Name"
        >
          Last Name
        </th>
        <th
          colspan="1"
          data-testid="my_availity_table_table_header_row_0_cell_2_email"
          id="my_availity_table_table_header_row_0_cell_2_email"
          role="columnheader"
          title="Email"
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        class="av-grid-row-even"
        data-testid="my_availity_table_table_row_0"
        id="my_availity_table_table_row_0"
        role="row"
      >
        <td
          data-testid="my_availity_table_table_row_0_cell_0"
          id="my_availity_table_table_row_0_cell_0"
        >
          Barbra
        </td>
        <td
          data-testid="my_availity_table_table_row_0_cell_1"
          id="my_availity_table_table_row_0_cell_1"
        >
          Tull
        </td>
        <td
          data-testid="my_availity_table_table_row_0_cell_2"
          id="my_availity_table_table_row_0_cell_2"
        >
          btull0@usatoday.com
        </td>
      </tr>
      <tr
        class="av-grid-row-odd"
        data-testid="my_availity_table_table_row_1"
        id="my_availity_table_table_row_1"
        role="row"
      >
        <td
          data-testid="my_availity_table_table_row_1_cell_0"
          id="my_availity_table_table_row_1_cell_0"
        >
          Karlis
        </td>
        <td
          data-testid="my_availity_table_table_row_1_cell_1"
          id="my_availity_table_table_row_1_cell_1"
        >
          Yurshev
        </td>
        <td
          data-testid="my_availity_table_table_row_1_cell_2"
          id="my_availity_table_table_row_1_cell_2"
        >
          kyurshev1@spotify.com
        </td>
      </tr>
      <tr
        class="av-grid-row-even"
        data-testid="my_availity_table_table_row_2"
        id="my_availity_table_table_row_2"
        role="row"
      >
        <td
          data-testid="my_availity_table_table_row_2_cell_0"
          id="my_availity_table_table_row_2_cell_0"
        >
          Bordie
        </td>
        <td
          data-testid="my_availity_table_table_row_2_cell_1"
          id="my_availity_table_table_row_2_cell_1"
        >
          Marsy
        </td>
        <td
          data-testid="my_availity_table_table_row_2_cell_2"
          id="my_availity_table_table_row_2_cell_2"
        >
          bmarsy2@elegantthemes.com
        </td>
      </tr>
    </tbody>
  </table>
   
</div>
`;

exports[`Table should render with formatted cells 1`] = `
<div>
  <table
    class="av-grid table"
    role="table"
  >
    <thead
      class="av-grid-row-header"
      id="table_header"
    >
      <tr
        data-testid="table_header_row_0"
        id="table_header_row_0"
        role="row"
      >
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_0_text"
          id="table_header_row_0_cell_0_text"
          role="columnheader"
          title="Basic Text"
        >
          Basic Text
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_1_currency"
          id="table_header_row_0_cell_1_currency"
          role="columnheader"
          title="Currency"
        >
          Currency
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_2_badge"
          id="table_header_row_0_cell_2_badge"
          role="columnheader"
          title="Badge"
        >
          Badge
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_3_icon"
          id="table_header_row_0_cell_3_icon"
          role="columnheader"
          title="Icon"
        >
          Icon
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_4_icon2"
          id="table_header_row_0_cell_4_icon2"
          role="columnheader"
          title="icon2"
        >
          icon2
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_5_date"
          id="table_header_row_0_cell_5_date"
          role="columnheader"
          title="Date"
        >
          Date
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_6_actions"
          id="table_header_row_0_cell_6_actions"
          role="columnheader"
          title="Actions"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        class="av-grid-row-even"
        data-testid="table_row_0"
        id="table_row_0"
        role="row"
      >
        <td
          data-testid="table_row_0_cell_0"
          id="table_row_0_cell_0"
        >
          My Text Field
        </td>
        <td
          data-testid="table_row_0_cell_1"
          id="table_row_0_cell_1"
        >
          <span
            title="$43.08"
          >
            $43.08
          </span>
        </td>
        <td
          data-testid="table_row_0_cell_2"
          id="table_row_0_cell_2"
        >
          <span
            class="badge badge-badge-success"
            title="badge field"
          >
            badge field
          </span>
        </td>
        <td
          data-testid="table_row_0_cell_3"
          id="table_row_0_cell_3"
        >
          <i
            aria-hidden="true"
            class="icon icon-doc-alt"
            title="View Notes"
          />
        </td>
        <td
          data-testid="table_row_0_cell_4"
          id="table_row_0_cell_4"
        >
          <i
            aria-hidden="true"
            class="icon icon-doc-alt"
            title="test"
          />
        </td>
        <td
          data-testid="table_row_0_cell_5"
          id="table_row_0_cell_5"
        >
          <span
            title="02/16/1956"
          >
            02/16/1956
          </span>
        </td>
        <td
          data-testid="table_row_0_cell_6"
          id="table_row_0_cell_6"
        >
          <div
            class="dropdown-action-menu dropleft dropdown"
            id="table_row_action_menu_1"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="btn btn-ghost btn btn-secondary"
              data-boundary="viewport"
              id="table_row_action_menu_1_dropdown_toggle"
              type="button"
            >
              <i
                aria-hidden="true"
                class="icon icon-menu"
                id="table_row_action_menu_1_dropdown_toggle_icon"
              />
            </button>
            <div
              aria-hidden="true"
              class="dropdown-action-menu dropdown-menu"
              id="table_row_action_menu_1_dropdown_toggle_icon"
              role="menu"
              tabindex="-1"
            >
              <button
                class="dropdown-item"
                id="table_row_action_menu_item_0_action_action1"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                Action 1
              </button>
              <div
                class="dropdown-divider"
                id="table_row_action_menu_item_1_action_actionDivider"
                tabindex="-1"
              />
              <button
                class="dropdown-item"
                id="table_row_action_menu_item_2_action_action2"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                Action 2
              </button>
            </div>
          </div>
          <i
            aria-hidden="true"
            class="icon icon-file-pdf"
            style="cursor: pointer;"
            title="View File"
          />
        </td>
      </tr>
      <tr
        class="av-grid-row-odd"
        data-testid="table_row_1"
        id="table_row_1"
        role="row"
      >
        <td
          data-testid="table_row_1_cell_0"
          id="table_row_1_cell_0"
        >
          My Text Field
        </td>
        <td
          data-testid="table_row_1_cell_1"
          id="table_row_1_cell_1"
        >
          <span
            title="$43.08"
          >
            $43.08
          </span>
        </td>
        <td
          data-testid="table_row_1_cell_2"
          id="table_row_1_cell_2"
        >
          <span
            class="badge badge-badge-success"
            title="badge field"
          >
            badge field
          </span>
        </td>
        <td
          data-testid="table_row_1_cell_3"
          id="table_row_1_cell_3"
        />
        <td
          data-testid="table_row_1_cell_4"
          id="table_row_1_cell_4"
        />
        <td
          data-testid="table_row_1_cell_5"
          id="table_row_1_cell_5"
        >
          <span
            title="02/16/1990"
          >
            02/16/1990
          </span>
        </td>
        <td
          data-testid="table_row_1_cell_6"
          id="table_row_1_cell_6"
        >
          <div
            class="dropdown-action-menu dropleft dropdown"
            id="table_row_action_menu_2"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="btn btn-ghost btn btn-secondary"
              data-boundary="viewport"
              id="table_row_action_menu_2_dropdown_toggle"
              type="button"
            >
              <i
                aria-hidden="true"
                class="icon icon-menu"
                id="table_row_action_menu_2_dropdown_toggle_icon"
              />
            </button>
            <div
              aria-hidden="true"
              class="dropdown-action-menu dropdown-menu"
              id="table_row_action_menu_2_dropdown_toggle_icon"
              role="menu"
              tabindex="-1"
            >
              <div
                class="dropdown-divider"
                id="table_row_action_menu_item_1_action_actionDivider"
                tabindex="-1"
              />
              <button
                class="dropdown-item"
                id="table_row_action_menu_item_2_action_action2"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                Action 2
              </button>
            </div>
          </div>
          <i
            aria-hidden="true"
            class="icon icon-file-pdf"
            style="cursor: pointer;"
            title="View File"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
